Bug 165851 - Installing custom default template via extension stopped working
Summary: Installing custom default template via extension stopped working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:25.2.3 target:24...
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2025-03-21 12:57 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-22 04:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example extension to test (8.77 KB, application/x-zip-compressed)
2025-03-21 12:57 UTC, Gabor Kelemen (Collabora)
Details
How it should look (66.08 KB, image/png)
2025-03-21 12:57 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-03-21 12:57:21 UTC
Created attachment 199940 [details]
Example extension to test

Attached example extension installs a custom default Writer template.
This can be identified by the paragraph style "ACustomPara" appearing in the sidebar in the paragraph styles list when opening an empty Writer doc.

Since 25.2 this stopped working, we get the default template.

1. Download the attached extension
2. Go to Tools - Extensions and install it
3. Restart, then look at the paragraph styles list
-> no ACustomPara at the top

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1d8ff7bd62249ad0f825eaca18ea524d9d7c6c2e
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Bibisected with bibisecte-win-252 to:
https://git.libreoffice.org/core/+/836d73a65180d89a077e36457f1f3aa1698c2058%5E%21

commit 836d73a65180d89a077e36457f1f3aa1698c2058	[log]
author	Caolán McNamara <caolan.mcnamara@collabora.com>	Fri Nov 15 12:30:39 2024 +0000
committer	Caolán McNamara <caolan.mcnamara@collabora.com>	Tue Nov 19 20:20:03 2024 +0100
tree f4274821a213af6e42748147b136b8f433c26d6d
parent 40a1affe63dd1321a423308cce8a407b4972949a [diff]

consider VndSunStarExpand an exotic protocol
Comment 1 Gabor Kelemen (Collabora) 2025-03-21 12:57:45 UTC
Created attachment 199941 [details]
How it should look
Comment 2 Commit Notification 2025-03-21 16:25:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8c548d46f4eacd615527412a0019d7a46150bee6

tdf#165851 sfx2: fix loading template with expand URL from configuration

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-03-22 04:54:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/286e46c1a572f77df382af46c29ce862f4fe5c31

tdf#165851 sfx2: fix loading template with expand URL from configuration

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-03-22 04:55:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/059d996add1cabb7f530025787c04970482926d5

tdf#165851 sfx2: fix loading template with expand URL from configuration

It will be available in 24.8.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.