tdf#165851 sfx2: fix loading template with expand URL from configuration

Expand trusted URLs from configuration or extension.

(regression from commit 836d73a65180d89a077e36457f1f3aa1698c2058)

Change-Id: I7c2f8a59b44ae62e25ac26eb568f3f80c77a01ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183206
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>